Quorum3/Library/Tests/Actions/Pass/ReturnCast2ActionsBool.quorum
class Main
    action Main
        boolean a = true
        x = foo(a)
        output x
        output bar(x)
    end

    action foo (boolean a) returns boolean
        if a = true
            a = false
        else
            a = true
        end
        return a
    end

    action bar (boolean a) returns boolean
        if a = true
            a = false
        else
            a = true
        end
        return a
    end
end