Quorum3/Library/Tests/Actions/Fail/MissingReturn6.quorum
class Main 
    action Main
        Test()
    end

    action Test returns boolean
        if 1 = 1
            return false
        else
        end
    end
end